--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
+    "start": "node server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
